[package]
name = "talkama"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "talkama_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.14", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.11.7"
tauri-plugin-http = "2.4.2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
